# Zarumet

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
Zarumet_docs/: 01_unicode_width_caching.md  02_render_caching.md  03_dirty_region_rendering.md  04_async_io_patterns.md  05_cover_art_prefetching.md  06_thread_local_vs_shared.md  07_mpd_protocol_optimization.md  08_memory_efficient_structures.md  README.md
examples/: config.toml
nix/: build.nix  hm-module.nix  hm_module.nix  shell.nix
src/: binds.rs  config.rs  logging.rs  main.rs  menu.rs  song.rs  ui.rs
src/app/: app.rs  binds_handler.rs  cli.rs  constructor.rs  cover_cache.rs  event_handlers.rs  logging.rs  main_loop.rs  mod.rs  mpd_handler.rs  mpd_updates.rs  navigation.rs  terminal.rs
src/app/audio/: mod.rs  pipewire.rs
src/app/config/: binds.rs  colors.rs  config.rs  logging.rs  mod.rs  mpd.rs  pipewire.rs
src/app/main_loop/: connection.rs  mloop.rs  mod.rs  unsplit_loop.rs
src/app/mpd/: mod.rs  mpd_handler.rs  mpd_updates.rs
src/app/navigation/: albums_nav.rs  artists_nav.rs  helpers.rs  main_nav.rs  mod.rs  navigation.rs  panel_nav.rs  scrolling.rs
src/app/song/: album.rs  artist.rs  library.rs  mod.rs  song_info.rs
src/app/ui/: mod.rs
src/app/ui/cache/: cover_cache.rs  dirty.rs  mod.rs  width_cache.rs
src/app/ui/rendering/: mod.rs  renderer.rs  utils.rs
src/app/ui/views/: albums.rs  artists.rs  menu.rs  mod.rs  queue.rs
src/app/ui/widgets/: generic.rs  image.rs  progress.rs  queue.rs  song.rs  top_box.rs
src/pipewire/: mod.rs  pipewire.rs
src/ui/: albums_renderer.rs  dirty.rs  menu.rs  mod.rs  render_cache.rs  renderer.rs  utils.rs  width_cache.rs  width_cache_bench.rs
src/ui/widgets/: generic.rs  image.rs  mod.rs  progress.rs  queue.rs  song.rs  top_box.rs
