[package]
name = "zarumet"
version = "0.1.0"
edition = "2024"
authors = ["Immelancholy <lenalowes0@gmail.com>"]
license = "MIT"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
image = "0.25.9"
ratatui-image = { version = "8.0.2", features = ["serde", "tokio"] }
mpd_client = "1.4.1"
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
