[package]
name = "zarumet"
version = "0.1.4"
edition = "2024"
authors = ["Immelancholy <lenalowes0@gmail.com>"]
license = "MIT"
description = "A terminal-based mpd album display"
homepage = "https://github.com/Immelancholy/zarumet"
repository = "https://github.com/Immelancholy/zarumet"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
image = "0.25.9"
ratatui-image = { version = "8.0.2", features = ["serde", "tokio"] }
mpd_client = "1.4.1"
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
