[package]
name = "zarumet"
version = "1.2.0"
edition = "2024"
authors = ["Immelancholy <lenalowes0@gmail.com>"]
license = "MIT"
description = "A terminal-based mpd client with album display"
homepage = "https://github.com/Immelancholy/zarumet"
repository = "https://github.com/Immelancholy/zarumet"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
log = "0.4"
env_logger = "0.11"
flexi_logger = "0.29"
image = "0.25.9"
ratatui-image = { version = "8.0.2", features = ["serde", "tokio"] }
mpd_client = "1.4.1"
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
unicode-width = "0.2.0"
dirs = "6.0"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9.2"
regex = "1.11"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
